[tool.poetry]
name = "owlclaw"
version = "0.1.0"
description = "task runner"
authors = ["Atsushi Morimoto (74th) <site@74th.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colored = "^1.4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
